# bbb-backend

./: .gitignore  Dockerfile  README.md  pyproject.toml
_apps/warehouse/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
_apps/warehouse/migrations/: 0001_initial.py  0002_alter_product_sku.py
core/: settings.py  urls.py
tests/: conftest.py
tests/warehouse/: test_model.py  test_serializers.py  test_views.py
